feat: updated task controller for openapi documentation
